RESOLVED FIXED13531
copyright sign in Latin1 leads to a warning
https://bugs.webkit.org/show_bug.cgi?id=13531
Summary copyright sign in Latin1 leads to a warning
Jungshik Shin
Reported 2007-04-27 20:49:34 PDT
npruntime.h has a copyright sign in Latin-1 encoding (0xA9). It should be replaced by '(C)'.
Attachments
patch (893 bytes, patch)
2007-04-27 20:59 PDT, Jungshik Shin
sam: review-
patch with changelog fix (1015 bytes, patch)
2007-04-28 11:37 PDT, Jungshik Shin
no flags
patch with changelog fixed (1014 bytes, patch)
2007-04-28 11:38 PDT, Jungshik Shin
sam: review+
Jungshik Shin
Comment 1 2007-04-27 20:59:51 PDT
Created attachment 14238 [details] patch one liner
Sam Weinig
Comment 2 2007-04-28 09:13:43 PDT
Comment on attachment 14238 [details] patch Patch looks good to me. The changelog, however, needs to be cleaned up a little to include your name and email address where jungshik <set EMAIL_ADDRESS environment variable> currently is and to add the bugzilla url as well. Thanks for the patch. r- for now.
Jungshik Shin
Comment 3 2007-04-28 11:37:02 PDT
Created attachment 14244 [details] patch with changelog fix
Jungshik Shin
Comment 4 2007-04-28 11:38:34 PDT
Created attachment 14245 [details] patch with changelog fixed
Sam Weinig
Comment 5 2007-04-28 14:01:11 PDT
Comment on attachment 14245 [details] patch with changelog fixed r=me
Jungshik Shin
Comment 6 2007-04-28 14:42:56 PDT
thanks. can you land it as well?
Mark Rowe (bdash)
Comment 7 2007-04-29 00:03:33 PDT
Landed in r21178.
Note You need to log in before you can comment on or make changes to this bug.