2007-04-28  Jungshik Shin  <jungshik.shin@gmail.com>

Reviewed by Sam Weinig.

        - Replace copyright sign in Latin-1 (0xA9) with '(C)'
        http://bugs.webkit.org/show_bug.cgi?id=13531

        * bindings/npruntime.h:


Canonical link: https://commits.webkit.org/17690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21178 268f45cc-cd09-0410-ab3c-d52691b4dbfc